# DRAFT

./: .gitignore  .readthedocs.yaml  README.md  apjfonts.sty  get_ilc_residuals.py  params.ini  pyproject.toml  setup.py  tutorial.ipynb
DRAFT/: get_ilc_residuals.py  params.ini  trigger_all_chile_config.py
DRAFT/data/: dl_ksz_CSFplusPATCHY_13sep2011_norm1_fake12000.txt
DRAFT/modules/: flatsky.py  foregrounds.py  misc.py
data/: cmbs4_chile_opt_survey_patch_noise_levels.npy  dl_cib_1halo_norm1_12000.txt  dl_cib_2halo_norm1_12000.txt  dl_shaw_tsz_s10_153ghz_norm1_fake12000.txt  george_plot_bestfit_line.sav
data/WAFTT/: Cls_cibc_145x145.txt  Cls_tsz_145x145.txt
docs/: Makefile  conf.py  make.bat  requirements.txt
lowell_BB/: get_ilc_weights_and_residuals.ipynb  params.ini
modules/: exp_specs.py  exp_specs_for_cluster_papers.py  exp_specs_for_spt.py  flatsky.py  foregrounds.py  foregrounds_with_scalings.py  ilc.py  ilc_with_TE_separate.py  misc.py  test  tools.py
pol_sources/: flatsky.py  get_pol_sources_snr_for_cmbs4.ipynb  tools.py
results/: s4deep_ilc_20204015.npy
scripts/: combine_gal_cl_from_different_masks.py  combine_gal_cl_from_different_masks_20201117.py  combine_gal_cl_from_different_masks_before_20200916.py  ex_ilc.txt  gen_pysm_sims.py  get_ilc_residuals.py  get_ilc_residuals_withcorrnoise_withgal_TTEETE_partialilcusingmultipliers_cilc_0.5.py  get_ilc_residuals_withcorrnoise_withgalplusplanckmasks_0.2.py  get_pspec_galactic_sims.py  make_plots.py  params.ini  reports  trigger_all_chile_config.py  trigger_gal_spec.py  trigger_gal_spec_v2.py
(+590 files in other folders)
