[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "FlatSkyLab"
version = "0.1.0"
description = "Flat-sky CMB simulations, correlated map/TOD realisations, and power spectrum estimation"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [{name = "Srinivasan Raghunathan"}]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyparsing>=2.0.2",
    "camb>=1.5",
]

[project.urls]
Homepage = "https://github.com/sriniraghunathan/FlatSkyLab"
Documentation = "https://flatskylab.readthedocs.io"

[tool.setuptools.packages.find]
include = ["FlatSkyLab*"]
