[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "CMB-S4 DRAFT tool"
version = "0.1.0"
description = "CMB-S4 DRAFT tool package"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [{name = "Srinivasan Raghunathan"}]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyparsing>=2.0.2",
    "camb>=1.5",
    "FlatskyLab",
]

[project.urls]
Homepage = "https://github.com/sriniraghunathan/DRAFT"
Documentation = "https://flatskylab.readthedocs.io"

[tool.setuptools.packages.find]
include = ["DRAFT*"]
